[Users-controller] => Update profile, avatar
